# hulunote-rust

./: .env  .gitignore  Cargo.toml  README.md  REGISTRATION_CODE_GUIDE.md  env-production-template.txt  init.sql  run.sh
migrations/: 001_add_registration_codes.sql
nginx-deploy/: README.md  deploy-nginx.sh  hulunote.nginx.txt  renew-ssl.sh
resources/public/: index.html
resources/public/html/: hulunote.html
scripts/: deploy.sh  generate_registration_code.sh  monitor.sh
src/: config.rs  db.rs  error.rs  main.rs  middleware.rs  models.rs  routes.rs
src/handlers/: auth.rs  database.rs  import.rs  mod.rs  nav.rs  note.rs  user.rs  ws.rs
